<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?selectableItemBackground"
        android:clickable="true"
        android:focusable="true"
        android:layout_marginTop="@dimen/cardMarginVertical"
        android:layout_marginBottom="@dimen/cardMarginVertical"
        android:layout_marginStart="@dimen/cardMarginHorizontal"
        android:layout_marginEnd="@dimen/cardMarginHorizontal"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:cardBackgroundColor="@color/backgroundPrimary"
        app:cardCornerRadius="@dimen/cardRadius"
        app:cardElevation="@dimen/cardElevation">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="@dimen/imagePreviewSize"
                android:layout_height="@dimen/imagePreviewSize"
                android:layout_marginStart="@dimen/cardContentMargin"
                android:layout_marginTop="@dimen/cardContentMargin"
                android:layout_marginBottom="@dimen/cardContentMargin"
                android:contentDescription="@string/image_content"
                android:scaleType="fitCenter"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:background="@drawable/avatar_1"
                app:srcCompat="@drawable/circle" />

            <TextView
                android:id="@+id/login_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/cardContentMargin"
                android:layout_marginTop="@dimen/cardContentMargin"
                android:text="@string/login_text"
                android:textColor="@color/textColor"
                android:textSize="@dimen/cardFontSize"
                app:layout_constraintStart_toEndOf="@+id/imageView"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/name_text_view"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginStart="@dimen/cardContentMargin"
                android:layout_marginTop="@dimen/cardTextMarginTop"
                android:layout_marginEnd="@dimen/cardContentMargin"
                android:layout_marginBottom="@dimen/cardContentMargin"
                android:text="@string/name_content"
                android:textColor="@color/nameTextColor"
                android:textSize="@dimen/fontSize"
                app:layout_constrainedWidth="true"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toEndOf="@+id/imageView"
                app:layout_constraintTop_toBottomOf="@+id/login_text_view"
                app:layout_constraintVertical_bias="0.0" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>